test/variables/static/bad-attr-arg-same-name.good
bad-attr-arg-same-name.chpl:2: In function 'f':
bad-attr-arg-same-name.chpl:4: error: invalid argument to @functionStatic attribute
